--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
-
-    {{#if owner}}
+    {{debug this}}
+    {{#if isOwner}}
 
     <div class="flexrow">
         <img class="npc-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
