--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -51,7 +51,7 @@
             <select class="damage-type" name="data.damageType.value">
                 {{#select data.damageType.value}}
                
-                {{#each item.FORTYK.damageTypes}}
+                {{#each FORTYK.damageTypes}}
               
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
@@ -64,7 +64,7 @@
 
             <select class="weapon-type"  name="data.class.value">
                 {{#select data.class.value}}
-                {{#each item.FORTYK.rangedWeaponClasses}}
+                {{#each FORTYK.rangedWeaponClasses}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
@@ -75,7 +75,7 @@
 
             <select class="weapon-type"  name="data.type.value">
                 {{#select data.type.value}}
-                {{#each item.FORTYK.rangedWeaponTypes}}
+                {{#each FORTYK.rangedWeaponTypes}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
@@ -86,7 +86,7 @@
 
             <select class="quality"  name="data.quality.value">
                 {{#select data.quality.value}}
-                {{#each item.FORTYK.itemQualities}}
+                {{#each FORTYK.itemQualities}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
