--- a/templates/item/item-rangedWeapon-sheet.html
+++ b/templates/item/item-rangedWeapon-sheet.html
@@ -44,8 +44,9 @@
         <div class="flexcol">
             <label>Damage Type:</label>
             <select class="damage-type" name="data.damageType.value">
+                {{ debug this}}
                 {{#select data.damageType.value}}
-                {{#each item.FORTYK.damageTypes}}
+                {{#each FORTYK.damageTypes}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
@@ -56,7 +57,7 @@
 
             <select class="weapon-type"  name="data.class.value">
                 {{#select data.class.value}}
-                {{#each item.FORTYK.rangedWeaponClasses}}
+                {{#each FORTYK.rangedWeaponClasses}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
@@ -67,7 +68,7 @@
 
             <select class="weapon-type"  name="data.type.value">
                 {{#select data.type.value}}
-                {{#each item.FORTYK.rangedWeaponTypes}}
+                {{#each FORTYK.rangedWeaponTypes}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
@@ -78,7 +79,7 @@
 
             <select class="quality"  name="data.quality.value">
                 {{#select data.quality.value}}
-                {{#each item.FORTYK.itemQualities}}
+                {{#each FORTYK.itemQualities}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
