--- a/templates/item/item-mod-sheet.html
+++ b/templates/item/item-mod-sheet.html
@@ -12,7 +12,7 @@
 
             <select class="quality"  name="data.quality.value">
                 {{#select data.quality.value}}
-                {{#each item.FORTYK.itemQualities}}
+                {{#each FORTYK.itemQualities}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
