--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="list-item">
                     <span>Special: 
-
+                        
                         {{#each this.flags.fortyk as |flag key|}}
 
                         {{#if this}}
@@ -421,7 +421,7 @@
                 <div class="flexcol">
                     <span class="section-title">COVER</span>
                     <span class="cover-reset button">Reset Cover</span>
-                    <input type="text" class="combat-resources" title="cover" name="data.secChar.cover.value" value="{{data.secChar.cover.value}}" data-dtype="Number"/>
+                    <input type="text"  title="cover" name="data.secChar.cover.value" value="{{data.secChar.cover.value}}" data-dtype="Number"/>
                     <div class="flexrow flex-group-center">
                         <div class="armor flexcol flex-group-center">
 
