--- a/templates/item/item-advancement-sheet.html
+++ b/templates/item/item-advancement-sheet.html
@@ -1,4 +1,8 @@
 <form class="{{cssClass}} item-sheet flexcol">
+    <header class="sheet-header">
+        <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
+        
+    </header>
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{name}}" name="name">
