--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -1,7 +1,10 @@
 
 
     <form class="{{cssClass}} item-sheet new-skill flexcol">
+         <header class="sheet-header">
+        <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{name}}"/>
         
+    </header>
         <div class="flexcol">
             <label>Skill Type:</label>
             <select class="skill-type" name="data.parent.value">
