--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -186,7 +186,7 @@
 
                                 {{#each this.flags.fortyk as |flag key|}}
 
-                                {{#if this}}
+                                {{#if (checkSpecial this)}}
 
                                 {{#with (lookup ../FORTYK.itemFlags [key])~}}
                                 <a class="item-descr" data-name="{{label}}" data-item-descr="{{description}}" >
@@ -295,7 +295,7 @@
 
                                 {{#each this.flags.fortyk as |flag key|}}
 
-                                {{#if this}}
+                                {{#if (checkSpecial this)}}
 
                                 {{#with (lookup ../FORTYK.itemFlags [key])~}}
                                 <a class="item-descr" data-name="{{label}}" data-item-descr="{{description}}" >
