--- a/templates/item/item-spaceshipSquadron-sheet.html
+++ b/templates/item/item-spaceshipSquadron-sheet.html
@@ -8,21 +8,14 @@
         <input type="text" value="{{name}}" name="name">
     </div>
     <div class="flexcol">
-        <label>Power:</label>
-        <input type="text" value="{{data.power.value}}" name="data.power.value">
-    </div>
-    <div class="flexcol">
-        <label>Space:</label>
-        <input type="text" value="{{data.space.value}}" name="data.space.value">
-    </div>
-    <div class="flexcol">
-        <label>Ship Points:</label>
-        <input type="text" value="{{data.sp.value}}" name="data.sp.value">
-    </div>
-    <div class="flexcol">
         <label>Type:</label>
         <input type="text" value="{{data.type.value}}" name="data.type.value">
     </div>
+    <div class="flexcol">
+        <label>Rating:</label>
+        <input type="text" value="{{data.rating.value}}" name="data.rating.value">
+    </div>
+    
     
     <div class="item-description">
         <label>Description:</label>
