--- a/templates/actor/spaceship-sheet.html
+++ b/templates/actor/spaceship-sheet.html
@@ -67,7 +67,8 @@
                     <input name="data.armor.value" type="text" value="{{data.armor.value}}" />
                 </div>
                 <div class="descrRow flexcol">
-                    <span class="descrSpan">Crew Rating:</span>
+                    <span class="char-total rollable button" data-roll-type="char" data-target="{{data.crew.rating}}" data-label="Crew Rating" data-char="">Crew Rating:</span>
+                    <span class="descrSpan"></span>
                     <input name="data.crew.rating" type="text" value="{{data.crew.rating}}" />
                 </div>
                 <div class="resource flex-group-center">
@@ -98,7 +99,7 @@
             </div>
 
 
-            
+
 
 
         </div>
@@ -131,17 +132,17 @@
                         <div class="flexcol">Start:<input type="text" class="combat-resources" name="data.shipPoints.value" value="{{data.shipPoints.value}}" data-dtype="Number"/></div>
                         <div class="flexcol"> Spent:
                             <span>{{data.shipPoints.spent}}</span></div>
-                       
+
                         <div class="flexcol"> Remnaining:
-                        <span>{{data.shipPoints.remaining}}</span></div>
-                       
+                            <span>{{data.shipPoints.remaining}}</span></div>
+
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label for="data.secChar.fatigue.value" class="resource-label">Power</label>
                     <div class="resource-content flexcol flex-center flex-between">
                         {{data.power.value}}
-                        
+
                         <input type="text" class="combat-resources" name="data.power.max" value="{{data.power.max}}" data-dtype="Number"/>
                     </div>
                 </div>
@@ -149,7 +150,7 @@
                     <label for="data.secChar.space.value" class="resource-label">Space</label>
                     <div class="resource-content flexcol flex-center flex-between">
                         {{data.space.value}}
-                       
+
                         <input type="text" class="combat-resources" name="data.space.max" value="{{data.space.max}}" data-dtype="Number"/>
                     </div>
                 </div>
@@ -186,20 +187,20 @@
                 <label for="data.secChar.space.value" class="resource-label">Weapon slots</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <div class="flexcol"> Dorsal: 
-                    <input type="text" class="combat-resources" name="data.weaponCapacity.dorsal" value="{{data.weaponCapacity.dorsal}}" data-dtype="Number"/></div>
-                   
+                        <input type="text" class="combat-resources" name="data.weaponCapacity.dorsal" value="{{data.weaponCapacity.dorsal}}" data-dtype="Number"/></div>
+
                     <div class="flexcol"> Prow: 
-                    <input type="text" class="combat-resources" name="data.weaponCapacity.prow" value="{{data.weaponCapacity.prow}}" data-dtype="Number"/></div>
-                   
+                        <input type="text" class="combat-resources" name="data.weaponCapacity.prow" value="{{data.weaponCapacity.prow}}" data-dtype="Number"/></div>
+
                     <div class="flexcol">Keel: 
-                    <input type="text" class="combat-resources" name="data.weaponCapacity.keel" value="{{data.weaponCapacity.keel}}" data-dtype="Number"/></div>
-                    
+                        <input type="text" class="combat-resources" name="data.weaponCapacity.keel" value="{{data.weaponCapacity.keel}}" data-dtype="Number"/></div>
+
                     <div class="flexcol">Port: 
-                    <input type="text" class="combat-resources" name="data.weaponCapacity.port" value="{{data.weaponCapacity.port}}" data-dtype="Number"/></div>
-                    
+                        <input type="text" class="combat-resources" name="data.weaponCapacity.port" value="{{data.weaponCapacity.port}}" data-dtype="Number"/></div>
+
                     <div class="flexcol">Starboard: 
-                    <input type="text" class="combat-resources" name="data.weaponCapacity.starboard" value="{{data.weaponCapacity.starboard}}" data-dtype="Number"/></div>
-                    
+                        <input type="text" class="combat-resources" name="data.weaponCapacity.starboard" value="{{data.weaponCapacity.starboard}}" data-dtype="Number"/></div>
+
                 </div>
             </div>
             {{#each actor.weapons as |t key|}}
@@ -237,20 +238,31 @@
             {{/each}}
         </div>
         <div class="tab cargo" data-group="primary" data-tab="cargo">
-            <div class="resource flex-group-center">
-                <label for="data.secChar.fatigue.value" class="resource-label">Cargo Capacity</label>
-                <div class="resource-content flexcol flex-center flex-between">
-                    {{data.cargo.value}}
-                   
-                    <input type="text" class="combat-resources" name="data.cargo.max" value="{{data.cargo.max}}" data-dtype="Number"/>
+            <div class="flexrow">
+                <div class="resource flex-group-center">
+                    <label for="data.secChar.fatigue.value" class="resource-label">Cargo Capacity</label>
+                    <div class="resource-content flexcol flex-center flex-between">
+                        {{data.cargo.value}}
+
+                        <input type="text" class="combat-resources" name="data.cargo.max" value="{{data.cargo.max}}" data-dtype="Number"/>
+                    </div>
+                </div>
+                <div class=" flex-group-center">
+                    <label for="data.secChar.fatigue.value" class="resource-label">Cargo Value</label>
+                    <div class="resource-content flexcol flex-center flex-between">
+                        {{data.cargo.profit}}
+
+
+                    </div>
                 </div>
             </div>
+
             <a class="item-create button" data-type="spaceshipCargo" title="Add Cargo">Add Cargo</a>
             <div class="list list7col grid grid-7col">
                 <span class="list-item">Name</span>
                 <span class="list-item">Type</span>
-                <span class="list-item">Space</span>
-                <span class="list-item">PF</span>
+                <span class="list-item">Qty</span>
+                <span class="list-item">Value</span>
                 <span class="list-item">Rarity</span>
                 <span class="list-button"></span>
                 <span class="list-button"></span>
@@ -258,8 +270,8 @@
 
                 <a class="item-descr list-item drag" data-id="{{t._id}}" data-name="{{t.name}}" data-item-descr="{{t.data.description.value}}">{{t.name}}</a>
                 <span class="list-item">{{t.data.type.value}}</span>
-                <span class="list-item">{{t.data.space.value}}</span>
-                <span class="list-item">{{t.data.pf.value}}</span>
+                <input type="text" class="item-text-input list-item" data-target="data.space.value" value="{{t.data.space.value}}" data-item-id="{{t._id}}" data-dtype="Number">
+                <span class="list-item">{{t.data.pf.total}}</span>
                 <span class="list-item">{{t.data.rarity.value}}</span>
                 <a class="list-button item-edit" title="Edit" data-item-id="{{t._id}}"></a>
                 <a class="list-button item-delete" title="Delete" data-item-id="{{t._id}}"></a>
