--- a/templates/actor/spaceship-sheet.html
+++ b/templates/actor/spaceship-sheet.html
@@ -261,7 +261,7 @@
             <div class="list list7col grid grid-7col">
                 <span class="list-item">Name</span>
                 <span class="list-item">Type</span>
-                <span class="list-item">Qty</span>
+                <span class="list-item">Quantity</span>
                 <span class="list-item">Value</span>
                 <span class="list-item">Rarity</span>
                 <span class="list-button"></span>
