--- a/templates/actor/spaceship-sheet.html
+++ b/templates/actor/spaceship-sheet.html
@@ -298,7 +298,7 @@
                 <a class="item-descr list-item drag" data-id="{{t._id}}" data-name="{{t.name}}" data-item-descr="{{t.data.description.value}}">{{t.name}}</a>
                 <span class="list-item">{{t.data.type.value}}</span>
                 <span class="list-item">{{t.data.rating.value}}</span>
-                <input type="checkbox" class="halfstr" data-item-id="{{this._id}}"  {{checked this.data.halfstr.value}}>
+                <span class="list-item"><input type="checkbox" class="halfstr" data-item-id="{{this._id}}"  {{checked this.data.halfstr.value}}></span>
                 <a class="list-button item-edit" title="Edit" data-item-id="{{t._id}}"></a>
                 <a class="list-button item-delete" title="Delete" data-item-id="{{t._id}}"></a>
 
