--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -23,7 +23,7 @@
     </div>
     <div class="resources flexrow">
 
-        <div class="resource flex-group-center">
+        <div class="flex-group-center">
             <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
@@ -31,7 +31,7 @@
                 <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
             </div>
         </div>
-        <div class="resource flex-group-center">
+        <div class="flex-group-center">
             <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
@@ -40,13 +40,13 @@
             </div>
         </div>
 
-        <div class="resource flex-group-center">
+        <div class="flex-group-center">
             <label for="data.fatigue.value" class="resource-label">Global Modifier</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
             </div>
         </div>
-        <div class="resource flex-group-center">
+        <div class="flex-group-center">
             <label for="data.fatigue.value" class="resource-label">Fate</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
@@ -56,7 +56,7 @@
         </div>
         {{#each actor.skills as |skill key|}}
         {{#if (contains skill.name "Dodge")}}
-        <div class="resource flex-group-center">
+        <div class=" flex-group-center">
             <label class="resource-label">{{skill.name}}</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <span class="char-total rollable button" data-roll-type="skill" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
@@ -64,7 +64,7 @@
         </div>
         {{/if}}
         {{#if (contains skill.name "Parry")}}
-        <div class="resource flex-group-center">
+        <div class="flex-group-center">
             <label class="resource-label">{{skill.name}}</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <span class="char-total rollable button" data-roll-type="skill" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
@@ -72,7 +72,7 @@
         </div>
         {{/if}}
         {{/each}}
-        <div class="resource flex-group-center">
+        <div class="flex-group-center">
             <label class="resource-label">Fear</label>
             <div class="resource-content flexrow flex-center flex-between">
                 <span class="char-total rollable button" data-roll-type="fear" data-target="{{data.characteristics.wp.total}}" data-label="Fear" data-char="wp" >Test</span>
