--- a/templates/actor/actorDH-gear.html
+++ b/templates/actor/actorDH-gear.html
@@ -1,8 +1,10 @@
 <div class="sheet-gear flexrow">
     <div class="cyber flexcol">
+        {{#if money}}
         <span class="section-title">CURRENCY</span>
         <span>Credits: <input type="text" name="data.currency.value" value="{{data.currency.value}}" data-dtype="Number"></span>
          <span>Base Monthly Income: {{data.currency.income}} Credits</span>
+        {{/if}}
         
         <span class="section-title">CYBERNETICS</span>
         <a class="item-create button" data-type="cybernetic" title="Add a new Cybernetic">Add Cybernetic</a>
