--- a/templates/actor/actorDH-main.html
+++ b/templates/actor/actorDH-main.html
@@ -88,7 +88,7 @@
         </div>
         <div class="resources flexrow">
 
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
@@ -96,7 +96,7 @@
                     <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
                 </div>
             </div>
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
@@ -104,7 +104,7 @@
                     <span type="text">{{data.secChar.fatigue.max}}</span>
                 </div>
             </div>
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.fatigue.value" class="resource-label">Influence</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" name="data.characteristics.inf.value" value="{{data.characteristics.inf.value}}" data-dtype="Number"/>
@@ -112,13 +112,13 @@
                     <span class="char-total rollable button" data-roll-type="char" data-target="{{data.characteristics.inf.total}}" data-label="{{data.characteristics.inf.label}}" data-char="inf">{{data.characteristics.inf.total}}</span>
                 </div>
             </div>
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.fatigue.value" class="resource-label">Global Modifier</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
                 </div>
             </div>
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.fatigue.value" class="resource-label">Fate</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
