--- a/templates/actor/actorOW-main.html
+++ b/templates/actor/actorOW-main.html
@@ -87,7 +87,7 @@
         </div>
         <div class="resources flexrow">
 
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
@@ -95,7 +95,7 @@
                     <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
                 </div>
             </div>
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
@@ -104,13 +104,13 @@
                 </div>
             </div>
             
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.fatigue.value" class="resource-label">Global Modifier</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
                 </div>
             </div>
-            <div class="resource flex-group-center">
+            <div class="flex-group-center">
                 <label for="data.fatigue.value" class="resource-label">Fate</label>
                 <div class="resource-content flexrow flex-center flex-between">
                     <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
