--- a/templates/item/item-spaceshipWeapon-sheet.html
+++ b/templates/item/item-spaceshipWeapon-sheet.html
@@ -39,7 +39,7 @@
     </div>
     <div class="flexcol">
         <label>Strength:</label>
-        <input type="text" value="{{data.stregth.value}}" name="data.strength.value">
+        <input type="text" value="{{data.strength.value}}" name="data.strength.value">
     </div>
     <div class="flexcol">
             <label>Location:</label>
