--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -398,6 +398,26 @@
     padding:3px;
     grid-column-end :span 2;
 }
+.fortyk .list-item-header{
+    border: 3px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+}
+.fortyk .list-item-header2{
+    border: 3px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+    grid-column-end :span 2;
+}
+.fortyk .list-item-header3{
+    border: 3px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+    grid-column-end :span 3;
+}
 .fortyk .power-training{
     width:100%;
 }
